--- a/src/main/resources/views/admin/AddUser.fxml
+++ b/src/main/resources/views/admin/AddUser.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -12,42 +13,68 @@
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.AddUserController">
-   <children>
-      <VBox alignment="CENTER" spacing="10.0">
-         <children>
-            <Label styleClass="title" text="Add User" />
-            <GridPane>
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Label prefHeight="18.0" prefWidth="224.0" text="User Name:" />
-                  <Label prefHeight="18.0" prefWidth="232.0" text="Password:" GridPane.rowIndex="1" />
-                  <Label prefHeight="18.0" prefWidth="230.0" text="Comfirm Password:" GridPane.rowIndex="2" />
-                  <TextField fx:id="userNameTextField" prefHeight="21.0" prefWidth="290.0" promptText="Enter Name..." GridPane.columnIndex="1">
-                     <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin></TextField>
-                  <PasswordField fx:id="passwordTextField" promptText="Enter Password..." GridPane.columnIndex="1" GridPane.rowIndex="1">
-                     <opaqueInsets>
-                        <Insets top="20.0" />
-                     </opaqueInsets></PasswordField>
-                  <PasswordField fx:id="conPasswordTextField" promptText="Comfirm Password..." GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <ComboBox fx:id="comboRole" prefHeight="26.0" prefWidth="313.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <Label prefHeight="18.0" prefWidth="227.0" text="Role:" GridPane.rowIndex="3" />
-               </children>
-            </GridPane>
-         </children>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-      </VBox>
-   </children>
+    <children>
+        <VBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <children>
+                <Label styleClass="title" text="Add User" />
+
+                <GridPane alignment="CENTER" hgap="10.0" vgap="5.0">
+                    <columnConstraints>
+                        <ColumnConstraints halignment="LEFT" hgrow="NEVER" minWidth="120.0" />
+                        <ColumnConstraints hgrow="NEVER" minWidth="200.0" />
+                    </columnConstraints>
+
+                    <rowConstraints>
+                        <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints vgrow="NEVER" />
+
+                        <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints vgrow="NEVER" />
+
+                        <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints vgrow="NEVER" />
+
+                        <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints vgrow="NEVER" />
+
+                        <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints vgrow="NEVER" />
+
+                        <RowConstraints minHeight="40.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+
+                    <children>
+                        <Label text="Username :" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                        <TextField fx:id="usernameTextField" promptText="Enter Username" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                        <Label fx:id="usernameErrorMessage" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
+                        <Label text="Email :" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                        <TextField fx:id="emailTextField" promptText="Enter Email" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label fx:id="emailErrorMessage" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+
+                        <Label text="Password :" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                        <PasswordField fx:id="passwordTextField" promptText="Enter Password" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <Label fx:id="passwordErrorMessage" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+
+                        <Label text="Confirm Password :" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+                        <PasswordField fx:id="confirmPasswordTextField" promptText="Confirm Password" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <Label fx:id="confirmPasswordErrorMessage" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+
+                        <Label text="Role :" GridPane.columnIndex="0" GridPane.rowIndex="8" />
+                        <ComboBox fx:id="roleComboBox" prefWidth="250.0" promptText="Select Role" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                        <Label fx:id="roleErrorMessage" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+
+                        <Button fx:id="addUserBtn" mnemonicParsing="false" text="Add User" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="10">
+                            <GridPane.margin>
+                                <Insets top="10.0" />
+                            </GridPane.margin>
+                        </Button>
+                    </children>
+                </GridPane>
+            </children>
+            <padding>
+                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            </padding>
+        </VBox>
+    </children>
 </AnchorPane>
