add password visibility

--- a/src/main/resources/views/ForgotPassword.fxml
+++ b/src/main/resources/views/ForgotPassword.fxml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<StackPane xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.ForgotPasswordController">
+<StackPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.ForgotPasswordController">
     <children>
         <VBox alignment="CENTER" maxHeight="300.0" maxWidth="400.0" styleClass="container">
 
@@ -13,7 +24,7 @@
 
             <StackPane minHeight="200.0" minWidth="400.0">
                 <!-- Email Container -->
-                <VBox fx:id="emailForm" alignment="CENTER" spacing="20.0" StackPane.alignment="CENTER">
+                <VBox fx:id="emailForm" alignment="CENTER" spacing="20.0" visible="false" StackPane.alignment="CENTER">
                     <children>
                         <GridPane vgap="30.0">
                             <columnConstraints>
@@ -28,7 +39,7 @@
                             <children>
                                 <TextField fx:id="emailTextField" promptText="Enter your email address" GridPane.columnSpan="2" />
                                 <TextField fx:id="otpTextField" promptText="Enter OTP code" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-                                <Button styleClass="otp-button" fx:id="sendOTPBtn" mnemonicParsing="false" text="Send OTP" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+                                <Button fx:id="sendOTPBtn" mnemonicParsing="false" styleClass="otp-button" text="Send OTP" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
                                 <Button fx:id="verifyOTPBtn" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Verify OTP" GridPane.columnSpan="2" GridPane.rowIndex="2" />
                             </children>
                         </GridPane>
@@ -36,23 +47,30 @@
                 </VBox>
 
                 <!-- Change Password-->
-                <VBox fx:id="passwordForm" alignment="CENTER" spacing="20.0" visible="false" StackPane.alignment="CENTER">
+                <VBox fx:id="passwordForm" alignment="CENTER" spacing="20.0" StackPane.alignment="CENTER">
                     <children>
 
                         <GridPane vgap="30.0">
                             <columnConstraints>
-                                <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" minWidth="10.0" />
-                                <ColumnConstraints minWidth="10.0" />
+                                <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="400.0" />
+                                <ColumnConstraints maxWidth="5.0" minWidth="0.0" prefWidth="0.0" />
                             </columnConstraints>
                             <rowConstraints>
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             </rowConstraints>
                             <children>
                                 <TextField fx:id="newPasswordTextField" promptText="New Password" GridPane.columnSpan="2" />
                                 <TextField fx:id="confirmNewPasswordTextField" promptText="Confirm New Password" GridPane.columnSpan="2" GridPane.rowIndex="1" />
                                 <Button fx:id="confirmBtn" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Confirm" GridPane.columnSpan="2" GridPane.rowIndex="2" />
+                        <PasswordField fx:id="newPasswordPasswordField">
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin></PasswordField>
+                        <FontIcon fx:id="eyeSlashToggleButton" boundsType="LOGICAL_VERTICAL_CENTER" iconLiteral="fas-eye-slash" iconSize="24" translateX="-10.0" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" />
+                        <PasswordField fx:id="confirmNewPasswordPasswordField" GridPane.rowIndex="1" />
+                        <FontIcon fx:id="eyeSlashToggleButton1" iconLiteral="fas-eye-slash" iconSize="24" translateX="-10.0" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
                             </children>
                         </GridPane>
                     </children>
