--- a/src/main/resources/views/admin/AdminDashboard.fxml
+++ b/src/main/resources/views/admin/AdminDashboard.fxml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.StackPane?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.admin.AdminDashboardController">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.admin.AdminDashboardController">
    <children>
-      <VBox alignment="CENTER" layoutX="239.0" layoutY="84.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <Label styleClass="title" text="Admin Dashboard" />
-         </children>
-      </VBox>
+      <BorderPane fx:id="dashboardPane" layoutX="187.0" layoutY="75.0">
+         <top>
+            <ToolBar BorderPane.alignment="CENTER">
+              <items>
+                <Button fx:id="revenueBtn" mnemonicParsing="false" onAction="#clickRevenueBtn" text="Revenue" />
+                  <Button fx:id="salesProductBtn" mnemonicParsing="false" onAction="#clickSalesProductBtn" text="Sales Product" />
+                  <Button fx:id="staffPerformanceBtn" mnemonicParsing="false" onAction="#clickStaffPerformanceBtn" text="Staff Performance" />
+              </items>
+            </ToolBar>
+         </top>
+         <center>
+            <StackPane fx:id="contentPane" BorderPane.alignment="CENTER" />
+         </center>
+      </BorderPane>
    </children>
 </AnchorPane>
