--- a/src/main/resources/views/ForgotPassword.fxml
+++ b/src/main/resources/views/ForgotPassword.fxml
@@ -24,7 +24,7 @@
 
             <StackPane minHeight="200.0" minWidth="400.0">
                 <!-- Email Container -->
-                <VBox fx:id="emailForm" alignment="CENTER" spacing="20.0" visible="false" StackPane.alignment="CENTER">
+                <VBox fx:id="emailForm" alignment="CENTER" spacing="20.0" StackPane.alignment="CENTER">
                     <children>
                         <GridPane vgap="30.0">
                             <columnConstraints>
@@ -47,7 +47,7 @@
                 </VBox>
 
                 <!-- Change Password-->
-                <VBox fx:id="passwordForm" alignment="CENTER" spacing="20.0" StackPane.alignment="CENTER">
+                <VBox fx:id="passwordForm" alignment="CENTER" spacing="20.0" visible="false" StackPane.alignment="CENTER">
                     <children>
 
                         <GridPane vgap="30.0">
