--- a/src/main/resources/views/admin/AddUser.fxml
+++ b/src/main/resources/views/admin/AddUser.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import org.kordamp.ikonli.javafx.FontIcon?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.AddUserController">
     <children>
@@ -53,11 +54,11 @@
                         <Label fx:id="emailErrorMessage" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
                         <Label text="Password :" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-                        <PasswordField fx:id="passwordTextField" promptText="Enter Password" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <PasswordField fx:id="passwordPasswordField" promptText="Enter Password" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                         <Label fx:id="passwordErrorMessage" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
                         <Label text="Confirm Password :" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-                        <PasswordField fx:id="confirmPasswordTextField" promptText="Confirm Password" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <PasswordField fx:id="confirmPasswordPasswordField" promptText="Confirm Password" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                         <Label fx:id="confirmPasswordErrorMessage" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="7" />
 
                         <Label text="Role :" GridPane.columnIndex="0" GridPane.rowIndex="8" />
@@ -69,6 +70,10 @@
                                 <Insets top="10.0" />
                             </GridPane.margin>
                         </Button>
+                  <TextField fx:id="passwordTextField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <TextField fx:id="confirmPasswordTextField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                  <FontIcon fx:id="eyeSlashToggleButton1" iconLiteral="fas-eye-slash" iconSize="24" translateX="-10.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" />
+                  <FontIcon fx:id="eyeSlashToggleButton2" iconLiteral="fas-eye-slash" iconSize="24" translateX="-10.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="6" />
                     </children>
                 </GridPane>
             </children>
