--- a/src/main/resources/views/CakeCard.fxml
+++ b/src/main/resources/views/CakeCard.fxml
@@ -1,29 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-
-<VBox fx:id="cardPane_vbox" alignment="TOP_CENTER" prefHeight="196.0" prefWidth="180.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.CakeCardController">
-   <children>
-      <ImageView fx:id="cakeImage" fitHeight="140.0" fitWidth="180.0" pickOnBounds="true" preserveRatio="true" />
-      <Label fx:id="cakeName" />
-      <Label fx:id="cakePrice" />
-      <HBox alignment="CENTER" prefHeight="40.0" prefWidth="180.0">
-         <children>
-            <Button fx:id="decreaseBtn" mnemonicParsing="false" onAction="#clickdecreaseBtn" text="-" />
-            <Label fx:id="quantityLabel" text="0" />
-            <Button fx:id="increaseBtn" mnemonicParsing="false" onAction="#clickincreaseBtn" text="+" />
-         </children>
-      </HBox>
-      <Button fx:id="btnAddtoCart" mnemonicParsing="false" onAction="#clickAddToCart" text="Add to Cart">
-         <VBox.margin>
-            <Insets top="15.0" />
-         </VBox.margin>
-      </Button>
-   </children>
+<VBox fx:id="cakeCardVbox" alignment="CENTER" prefHeight="196.0" prefWidth="180.0" styleClass="card"
+      xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.cakeshopsystem.controllers.CakeCardController">
+    <ImageView fx:id="cakeImage" fitHeight="140.0" fitWidth="180.0" pickOnBounds="true" preserveRatio="true"/>
+    <Label fx:id="cakeName" styleClass="cake-header"/>
+    <Label fx:id="cakePrice"/>
+    <HBox alignment="CENTER" styleClass="qty-stepper">
+        <Button fx:id="decreaseBtn" text="-" styleClass="card-dec-btn"/>
+        <Label fx:id="quantityLabel" text="0" styleClass="qty-label" HBox.hgrow="ALWAYS"/>
+        <Button fx:id="increaseBtn" text="+" styleClass="card-inc-btn"/>
+    </HBox>
+    <Label fx:id="diyAvailable"/>
+    <HBox alignment="CENTER_RIGHT">
+        <Button fx:id="addToCartBtn" mnemonicParsing="false" text="Add to Cart" styleClass="card-btn"/>
+    </HBox>
 </VBox>
